# bean

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  build_and_package_velopack.bat  build_and_run.bat  build_app.bat  build_release_app.bat  download_velopack_sdk.bat  package_velopack_release.bat  run_all_checks.bat  run_log_simulation.bat  run_unit_tests.bat  ship_release.bat  sync_app_version.bat
.github/workflows/: ci.yml  release.yml
assets/icons/: README.md
assets/spec-icons/: README.md
cmake/: IncrementBuildNumber.cmake
docs/: libobs-integration.md
scripts/: sync_app_version.ps1
src/app/: AppContext.h  AppDraw.cpp  AppDraw.h  AppIconsTaskbar.cpp  AppIconsTaskbar.h  AppLayout.cpp  AppLayout.h  AppRecordingHelpers.cpp  AppRecordingHelpers.h  AppStatusLog.cpp  AppStatusLog.h  AppUtilities.cpp  AppUtilities.h  BeanUpdater.cpp  BeanUpdater.h  ClipPreviewEngine.cpp  ClipPreviewEngine.h  bean.rc.in  bean_version.h.in  main.cpp
src/core/: RecordingOrchestrator.cpp  RecordingOrchestrator.h  RunRepository.cpp  RunRepository.h  SettingsStore.cpp  SettingsStore.h
src/integrations/: YouTubeUploader.cpp  YouTubeUploader.h
src/log/: CombatLogWatcher.cpp  CombatLogWatcher.h  MythicRunDetector.cpp  MythicRunDetector.h
src/obs/: IRecorderEngine.h  LibObsRecorderEngine.cpp  LibObsRecorderEngine.h  MockRecorderEngine.cpp  MockRecorderEngine.h
tests/: CombatLogReplayDump.cpp  CorePublicApiTests.cpp  MythicRunDetectorTests.cpp  WoWCombatLog-061926_232002.detected-statuses.txt
